<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Pampa Widgets</string>
  <string name="media_widget_name">Media Controls</string>
  <string name="media_widget_description">Controlli musicali per Spotify, YouTube Music, Apple Music e app compatibili.</string>
</resources>
